# Sweet-boy

./: a1.c  a2.c  makefile
1_task/: a3.c  useless.c
2_task/: posudomoika  posudomoika.c
2_task_ver1/: posudomoika
2_task_ver2(AI version)/: makefile  posudomoika  posudomoika.c
Temp_array/: arr  arr.cpp  compile.sh
backup/: backup  backup.c  compile.sh
class.cpp/: class  class.cpp  compile.sh
cpp/: a.out  copy.cpp  func.cpp
mapfiles/: parent_child_mmap  parent_child_mmap.c
matrix_task/: Matrix_vova.c  Z.py  a.out  matrix.c
msg_task/: common.h  compile.sh  process_a  process_a.c  process_b  process_b.c
rbtree/: CMakeLists.txt
rbtree/include/: rbtree.hpp
rbtree/source/: RBTree.cpp  main.cpp  rbtree.cpp
rbtree/tests/: CMakeLists.txt  testing.cpp
server_task/: client  client.c  compile.sh  message.h  server  server.c
trucks/: bridge  bridge.c
